# wattscheduler

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  opencode.json  pyproject.toml
scripts/: run.sh  tests.sh
src/wattscheduler/app/: main.py
src/wattscheduler/app/api/: routes_health.py  routes_prices.py  routes_schedule.py  routes_ui.py
src/wattscheduler/app/core/: models.py  optimizer.py
src/wattscheduler/app/infra/: __init__.py  cache.py  price_providers.py  spot_hinta_provider.py
src/wattscheduler/app/ui/static/: app.js  style.css
src/wattscheduler/app/ui/templates/: index.html
test_cache/test_area/: 2023-01-01.json
tests/: test_cachestore.py  test_main.py  test_schedule_regression.py  test_spot_hinta.py
