[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wattscheduler"
version = "0.1.0"
description = "Electricity price based task scheduling"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mikko Mehtonen" }
]

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "httpx"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
